writed abstract alpha version

--- a/paper.tex
+++ b/paper.tex
@@ -71,7 +71,9 @@
     \maketitle
 
     \begin{abstract}
-        \lipsum[1]
+
+        There are many approaches \citep{approaches} to build recommender system. They have their advantages and disadvantages. In this work we address the question whether it worths to use as many information as we are able to collect to build a hybrid recommender system. This work is aimed to combine multiple recommenders via optimizing their contributions to weights vectors. Results show that combining different approaches leads to rise of users' involvement.
+
     \end{abstract}
 
 
@@ -80,12 +82,9 @@
 
     \section{Introduction}
 
-        \lipsum[2]
 
 
-    \section{Citations}
 
-        Many people have speculated that if we knew exactly why \citep{kour2014fast} thought this\dots
 
 
     \bibliographystyle{unsrtnat}
