added shitty introduction

--- a/paper.tex
+++ b/paper.tex
@@ -81,10 +81,34 @@
 
 
     \section{Introduction}
+    
+        Nowadays recommender systems are crucial part of every service that operates with user activity. There is so many information that user needs help to find content he wants to consume.
+
+        In this paper we found that it would be great to combine all available recommenders with different weights to negotiate their weak sides.
+
+        We use \textbf{Collaborative Filtering} and \textbf{Content-Based filtering} as main approaches.
+
+        Previously there were works related to single recommendation method, but there are not many of them that combine all approaches together and optimize them.
+
+        Vocabulary:
+
+            \begin{itemize}
+                \item Rating: expression or preference
+                \item Explicit (direct from user, e.g. rate the film)
+                \item Implicit (inferred from user activity, e.g. stop watching movie after 5 min)
+                \item Prediction: estimate of preference
+                \item Recommendation: selected items for user
+                \item Content: attributes, text, etc; everything about item
+                \item Collaborative: using data from other users
+            \end{itemize}
+
+        This work aimed to prove that hybrid methods works better than single recommenders. It will fill a gap between content creators and users so it will be easier to deliver content.
+
+        Firstly we will implement all state-of-the-art solutions. Afterwards we will combine them and optimize.
 
 
 
-
+        Results show that combining different approaches leads to rise of users' involvement.
 
 
     \bibliographystyle{unsrtnat}
