--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -58,7 +58,7 @@
 	\frametitle{Content-based approach}
 
 	\begin{figure}[h]
-		\includegraphics[width=0.5\textwidth]{./images/content_based.jpeg}
+		\includegraphics[width=0.9\textwidth]{./images/content_based.jpeg}
 		\centering
 	\end{figure}
 \end{frame}
@@ -76,70 +76,70 @@
 
 
 \begin{frame}
-	\frametitle{Problem}
+	\frametitle{Goal}
 
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Goals}
-
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Tasks}
-
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Initial data}
-
-\end{frame}
-
-
-
-
-\begin{frame}
-	\frametitle{Data analysis}
-
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Approaches analysis}
-
+	\begin{itemize}
+		\item Scalable hybrid news recommender system
+		\item Use as many information as possible
+		      \begin{itemize}
+			      \item users' logs
+			            \begin{itemize}
+				            \item likes
+				            \item comments
+				            \item views
+				            \item shows
+				            \item etc
+			            \end{itemize}
+			      \item news' features
+			            \begin{itemize}
+				            \item source
+				            \item popularity
+				            \item theme
+				            \item etc
+			            \end{itemize}
+		      \end{itemize}
+	\end{itemize}
 \end{frame}
 
 
 \begin{frame}
 	\frametitle{Solution}
 
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Data preparation}
-
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Algorithm choosing}
-
 	\begin{itemize}
-		\item
-		\item
-		\item
+		\item Hybrid recommender
+		      \begin{itemize}
+			      \item Collaborative recommender
+			      \item Content-based recommender
+			      \item Last Viewed recommender
+			      \item Boost recommender
+		      \end{itemize}
+		\item Optimize weights
 	\end{itemize}
 \end{frame}
 
 
 \begin{frame}
-	\frametitle{Conslusion}
+	\frametitle{Diagram}
 
+	\begin{figure}[h]
+		\includegraphics[width=0.8\textwidth]{./images/main.png}
+		\centering
+	\end{figure}
 \end{frame}
 
+
+
+\begin{frame}
+	\frametitle{Difficulties}
+
+	\begin{itemize}
+		\item Many approacher to every recommender
+		      \begin{itemize}
+			      \item A / B testing
+		      \end{itemize}
+		\item Many candidates (candidate generation)
+		\item High load
+	\end{itemize}
+\end{frame}
 
 \end{document}
