--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,8 +1,10 @@
-@inbook{approaches,
-    author = {Felfernig, A. and Jeran, Michael and Ninaus, Gerald and Reinfrank, Florian and Reiterer, Stefan and Stettinger, Martin},
-    year = {2014},
-    month = {12},
-    pages = {15-37},
-    title = {Basic Approaches in Recommendation Systems},
-    doi = {10.1007/978-3-642-45135-5__2}
+@article{overview,
+	author = {Çano, Erion},
+	year = {2017},
+	month = {11},
+	pages = {1487-1524},
+	title = {Hybrid Recommender Systems: A Systematic Literature Review},
+	volume = {21},
+	journal = {Intelligent Data Analysis},
+	doi = {10.3233/IDA-163209}
 }
