--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -317,6 +317,31 @@ our system’s results
     \section{Overview of our approach}
     \label{sec:overview}
 
+    Out goal is to combine state-of-the-art approaches in recommender systems.
+
+    According to the study \citep{progress}, deep learning techniques are not supposed to beat conceptually and computationally simpler algorithms, so we won't touch them.
+
+    Our approach consists of combining several techniques:
+
+    \begin{itemize}
+        \item \textbf{Collaborative filtering}: 
+        \item \textbf{Content-based filtering}:
+        \item \textbf{Session filtering}:
+        \item \textbf{Popularity filtering}:
+        \item \textbf{Demographic filtering}:
+        \item \textbf{Time-based filtering}:
+    \end{itemize}
+
+    Solution consists of 2 parts:
+
+
+    \begin{itemize}
+        \item Candidate generation
+        \item Ranking
+    \end{itemize}
+
+
+
     \subsection{Collaborative filtering recommendation}
 
     For collaborative filtering recommendation we should have something known as user-item matrix which may be formed from user activity from tables (cite tables)
