--- a/paper/references.bib
+++ b/paper/references.bib
@@ -8,3 +8,18 @@
 	journal = {Intelligent Data Analysis},
 	doi = {10.3233/IDA-163209}
 }
+@inproceedings{progress,
+	author = {Dacrema, Maurizio Ferrari and Cremonesi, Paolo and Jannach, Dietmar},
+	title = {Are We Really Making Much Progress? A Worrying Analysis of Recent Neural Recommendation Approaches},
+	year = {2019},
+	isbn = {9781450362436},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	doi = {10.1145/3298689.3347058},
+	booktitle = {Proceedings of the 13th ACM Conference on Recommender Systems},
+	pages = {101–109},
+	numpages = {9},
+	keywords = {deep learning, evaluation, reproducibility, recommender systems},
+	location = {Copenhagen, Denmark},
+	series = {RecSys '19}
+}
