--- a/paper/references.bib
+++ b/paper/references.bib
@@ -23,3 +23,18 @@
 	location = {Copenhagen, Denmark},
 	series = {RecSys '19}
 }
+@article{evaluation,
+	author = {Rendle, Steffen and Zhang, Li and Koren, Yehuda},
+	year = {2019},
+	month = {05},
+	pages = {},
+	title = {On the Difficulty of Evaluating Baselines: A Study on Recommender Systems}
+}
+@inproceedings{youtube,
+    title	= {Deep Neural Networks for YouTube Recommendations},
+    author	= {Paul Covington and Jay Adams and Emre Sargin},
+    year	= {2016},
+    booktitle	= {Proceedings of the 10th ACM Conference on Recommender Systems},
+    address	= {New York, NY, USA}
+}
+
